ec2.yml
AWSTemplateFormatVersion: "2010-09-09"

Description: Create EC2 Instance

Parameters:
  InstanceType:
    Description: WebServer EC2 instance type
    Type: String
    Default: t2.micro
    AllowedValues:
    - t1.micro
    - t2.nano
    - t2.micro
    - t2.small
    - t2.medium
    - t2.large
    ConstraintDescription: must be a valid EC2 instance type

  KeyName:
    Description : Name of an existing EC2 KeyPair.
    Type: AWS::EC2::KeyPair::KeyName
    ConstraintDescription : Can contain only ASCII characters.

  SSHLocation:
    Description: IP address range that can be used to SSH to the EC2 instances
    Type: String
    MinLength: '9'
    MaxLength: '18'
    Default: 0.0.0.0/0
    AllowedPattern: (\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})
    ConstraintDescription: must be a valid IP CIDR range of the form x.x.x.x/x.

Mappings:
  RegionMap:
    ap-northeast-1:
      hvm: "ami-0218d08a1f9dac831" # Amazon Linux 2 AMI (HVM) - Kernel 5.10, SSD Volume Type (64 ビット x86)
    ap-southeast-1:
      hvm: "ami-0dc5785603ad4ff54" # Amazon Linux 2 AMI (HVM) - Kernel 5.10, SSD Volume Type (64 ビット x86)

Resources:
  WebServer:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !FindInMap [RegionMap, !Ref 'AWS::Region', hvm]
      InstanceType: !Ref InstanceType
      BlockDeviceMappings:
        -
          DeviceName: /dev/xvda
          Ebs:
            VolumeType: gp2
            VolumeSize: 8
      NetworkInterfaces:
        - SubnetId: !ImportValue MyPublicSubnet1a
          GroupSet:
            - !GetAtt "SecurityGroupForWebServer.GroupId"
          AssociatePublicIpAddress: true
          DeviceIndex : 0
      KeyName: !Ref KeyName
      UserData: !Base64 |
        #!/bin/bash
        echo -e "===== yum -y install httpd =====\n"
        yum -y install httpd
        echo -e "===== systemctl start httpd.service =====\n"
        systemctl start httpd.service
        echo -e "===== systemctl enable httpd.service =====\n"
        systemctl enable httpd.service
      Tags:
      - Key: Name
        Value: !Sub ${AWS::StackName}-ec2

  SecurityGroupForWebServer:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: connect with ssh
      VpcId: !ImportValue MyVpc
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !Ref SSHLocation
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-sg-for-public-server
